# Raylib-Catch-The-Fruit

./: .gitignore  CMakeLists.txt  README.md  Raylib-Food-Collector-Game.code-workspace
src/: food.cpp  food.h  main.cpp  player.cpp  player.h
